package com.constructor.level2;

public class Employee {

    public int employeeID;
    protected String department;
    private double salary;

   
    Employee(int employeeID, String department, double salary) {
        this.employeeID = employeeID;
        this.department = department;
        this.salary = salary;
    }


    public void setSalary(double salary) {
       
            this.salary = salary;
}
    

    
    public double getSalary() {
        return salary;
    }
}