package com.encapsulationandpolymorphism.employeemanagementsystem;

public interface Department {
	void assignDepartment(String deptName);
	String getDepartmentDetails();
	
	
}
